# bolt-raycast

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml
bolt_raycast/: __init__.py  comment.py  enums.py  parse.py  utils.py
bolt_raycast/modules/: branch_mixin.bolt  detect_block.bolt  detect_entity.bolt  if_new_block_pos.bolt  raycast.bolt
examples/basic/: beet.yml
examples/basic/src/data/demo/functions/: foo.mcfunction
examples/block/: beet.yml
examples/block/src/data/demo/functions/: foo.mcfunction
examples/combo/src/data/combo/functions/: cast.mcfunction
examples/entity/src/data/demo/functions/: foo.mcfunction
tests/snapshots/: examples__build_basic__0.pack.md  examples__build_block__0.pack.md  examples__build_combo__0.pack.md  examples__build_entity__0.pack.md
