[tool.poetry]
name = "bolt_raycast"
version = "0.3.0"
description = "Easily generate raycasting functions for your datapack using bolt"
authors = ["Stefan van der Velden <vdvman1@users.noreply.github.com>"]
license = "MIT"

homepage = "https://github.com/vdvman1/bolt-raycast"
readme = "README.md"

keywords = [
  "beet",
  "bolt",
  "minecraft",
  "minecraft-commands",
  "mcfunction",
]

include = ["bolt_raycast/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
beet = "^0.80.1"
mecha = "^0.61.0"
bolt = ">=0.21,<0.23"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
pytest-insta = "^0.2.0"
lectern = "^0.26.0"
python-semantic-release = "^7.31.4"

[tool.pytest.ini_options]
addopts = "tests --import-mode=importlib"

[tool.pyright]
typeCheckingMode = "basic"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.semantic_release]
branch = "main"
version_variable = "bolt_raycast/__init__.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
major_on_zero = false
upload_to_repository = true
build_command = "poetry build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
